k8s/http-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs
  namespace: gloo-system
spec:
  virtualHost:
    options:
      extauth:
        configRef:
          name: basic-auth
          namespace: gloo-system
    domains:
    - httpbin.test
    options:
      extauth:
        configRef:
          name: basic-auth
          namespace: gloo-system
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system
